# loong

./: README.md  pyproject.toml  validation_statistics.json
.github/workflows/: execute_compare.yml  schema_check.yml  size_validation.yml  upload-to-hf.yml
cookbooks/: distillation.py  env_with_generator.ipynb
data/: CONTRIBUTING.md  check_schema.py  combine_seed_datasets.py  compare_execution_result_with_final_result.py  execute_and_compare.py  execute_and_compare_action.py  execute_compare_action.py  math_verifier_tem.py  number_check.py  physic_verifier_tem.py  rational_execution.py  schema_check.py  validation_statistics.json
data/advanced_math/: seed_dataset.json
data/advanced_physics/: seed_dataset.json
data/chemistry/: seed_dataset.json
data/computational_biology/: merged.json  seed_dataset.json
data/detailed_domain_results/: advanced_math_detailed.json  advanced_physics_detailed.json  computational_biology_detailed.json  finance_detailed.json  graph_discrete_math_detailed.json  logic_detailed.json  mathematical_programming_detailed.json  security_and_safety_detailed.json
data/execution_comparison_visualizations/: summary_results.csv  summary_results.md
data/finance/: seed_dataset.json
data/graph_discrete_math/: seed_dataset.json
data/logic/: seed_dataset.json
data/mathematical_programming/: seed_dataset.json
data/medicine/: seed_dataset.json
data/programming/: process_submission.py
data/security_and_safety/: seed_dataset.json  verify.py
scripts/: upload_to_hf.py  validate_seed_data_strucutre.py
