[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "loong"
version = "0.1.0"
description = "Loong project"
requires-python = ">=3.10"
dependencies = [
    "camel-ai[all]==0.2.43",
    "antlr4-python3-runtime==4.11"
]

[tool.setuptools]
packages = []
include-package-data = false
